[gd_scene load_steps=68 format=3 uid="uid://cx7kop68r28x7"]

[ext_resource type="Script" uid="uid://j3qwp5oqltll" path="res://story_arena_4.gd" id="1_8axos"]
[ext_resource type="Texture2D" uid="uid://cobhb70likea2" path="res://PlatformPlaceholder.png" id="2_08ymg"]
[ext_resource type="Texture2D" uid="uid://bi8nu1nce18dj" path="res://Placeholders/enemy.png" id="3_d25on"]
[ext_resource type="Texture2D" uid="uid://cm8vhve44kcx7" path="res://Red ground 2.png" id="4_3qoc5"]
[ext_resource type="Texture2D" uid="uid://i04gwivgwdia" path="res://Placeholders/ballorrock.png" id="5_vxvkr"]
[ext_resource type="Texture2D" uid="uid://5j8qv6y5p65v" path="res://Arena/1.png" id="6_oqe8c"]
[ext_resource type="Texture2D" uid="uid://21m1kijm24js" path="res://Arena/2.png" id="7_0vpur"]
[ext_resource type="Texture2D" uid="uid://ibu1lsnqa2oh" path="res://Arena/cannonshoot.png" id="8_rp3nl"]
[ext_resource type="Texture2D" uid="uid://qkh8y8x514hb" path="res://funny-boom.png" id="9_v0v01"]
[ext_resource type="Texture2D" uid="uid://dsbcechwm0pkq" path="res://Arena/mybeautifulboy0.png" id="10_pyak4"]
[ext_resource type="Texture2D" uid="uid://ws3qba4t0cbo" path="res://Arena/mybeautifulboy1.png" id="11_32ht8"]
[ext_resource type="Texture2D" uid="uid://cit5xe4ym4ucs" path="res://Arena/mybeautifulboy2.png" id="12_r8uxh"]
[ext_resource type="Texture2D" uid="uid://ddi461l7lvfgd" path="res://mmu.png" id="13_o7rq5"]
[ext_resource type="Texture2D" uid="uid://b15eqat3t5hjf" path="res://black.png" id="14_gjou0"]
[ext_resource type="FontFile" uid="uid://d34oowe03sf3o" path="res://font/BBHBartle-Regular.ttf" id="15_3l0cp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_11efd"]
size = Vector2(230.75, 29.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lx2g2"]
size = Vector2(230.75, 29.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j1le4"]
size = Vector2(85.33331, 80)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_bvtk8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pat5w"]
size = Vector2(959.1222, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d8wvr"]
size = Vector2(237.3334, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_naog5"]
size = Vector2(299.333, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghr7w"]
atlas = ExtResource("8_rp3nl")
region = Rect2(0, 0, 64, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrxn3"]
atlas = ExtResource("8_rp3nl")
region = Rect2(64, 0, 64, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_71a6e"]
atlas = ExtResource("8_rp3nl")
region = Rect2(128, 0, 64, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6gey"]
atlas = ExtResource("8_rp3nl")
region = Rect2(192, 0, 64, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_3t672"]
atlas = ExtResource("8_rp3nl")
region = Rect2(256, 0, 64, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_40ewl"]
atlas = ExtResource("8_rp3nl")
region = Rect2(320, 0, 64, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5qlv"]
atlas = ExtResource("8_rp3nl")
region = Rect2(384, 0, 64, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfnfc"]
atlas = ExtResource("8_rp3nl")
region = Rect2(448, 0, 64, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuptq"]
atlas = ExtResource("8_rp3nl")
region = Rect2(512, 0, 64, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_caaid"]
atlas = ExtResource("8_rp3nl")
region = Rect2(576, 0, 64, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_57ghr"]
atlas = ExtResource("8_rp3nl")
region = Rect2(640, 0, 64, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm0bj"]
atlas = ExtResource("8_rp3nl")
region = Rect2(704, 0, 64, 66)

[sub_resource type="SpriteFrames" id="SpriteFrames_wvjge"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghr7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrxn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71a6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6gey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3t672")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40ewl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5qlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfnfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuptq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_caaid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57ghr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm0bj")
}],
"loop": true,
"name": &"smoke",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_oj3pt"]
atlas = ExtResource("9_v0v01")
region = Rect2(0, 0, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya6b6"]
atlas = ExtResource("9_v0v01")
region = Rect2(220, 0, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlqap"]
atlas = ExtResource("9_v0v01")
region = Rect2(440, 0, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_7a412"]
atlas = ExtResource("9_v0v01")
region = Rect2(660, 0, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltfvd"]
atlas = ExtResource("9_v0v01")
region = Rect2(880, 0, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmk1o"]
atlas = ExtResource("9_v0v01")
region = Rect2(1100, 0, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1w86"]
atlas = ExtResource("9_v0v01")
region = Rect2(1320, 0, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrvva"]
atlas = ExtResource("9_v0v01")
region = Rect2(1540, 0, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnm0s"]
atlas = ExtResource("9_v0v01")
region = Rect2(1760, 0, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_3o1gj"]
atlas = ExtResource("9_v0v01")
region = Rect2(1980, 0, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_anpit"]
atlas = ExtResource("9_v0v01")
region = Rect2(2200, 0, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_atd4h"]
atlas = ExtResource("9_v0v01")
region = Rect2(2420, 0, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_rj6nr"]
atlas = ExtResource("9_v0v01")
region = Rect2(2640, 0, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_yni4w"]
atlas = ExtResource("9_v0v01")
region = Rect2(2860, 0, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_dakxl"]
atlas = ExtResource("9_v0v01")
region = Rect2(3080, 0, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_qik4b"]
atlas = ExtResource("9_v0v01")
region = Rect2(3300, 0, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_efvqo"]
atlas = ExtResource("9_v0v01")
region = Rect2(3520, 0, 220, 314)

[sub_resource type="AtlasTexture" id="AtlasTexture_g82a2"]
atlas = ExtResource("10_pyak4")
region = Rect2(0, 0, 498, 479)

[sub_resource type="AtlasTexture" id="AtlasTexture_vccrt"]
atlas = ExtResource("11_32ht8")
region = Rect2(0, 0, 498, 479)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jk04"]
atlas = ExtResource("12_r8uxh")
region = Rect2(0, 0, 498, 479)

[sub_resource type="SpriteFrames" id="SpriteFrames_g82a2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oj3pt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya6b6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlqap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7a412")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltfvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmk1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1w86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrvva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnm0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3o1gj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_anpit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_atd4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj6nr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yni4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dakxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qik4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efvqo")
}],
"loop": true,
"name": &"boom",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g82a2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vccrt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jk04")
}],
"loop": true,
"name": &"mybeautifulboy",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_hxxo4"]
font = ExtResource("15_3l0cp")
font_size = 30
font_color = Color(0, 1, 1, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_r3qtb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("gunholder:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("effect:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("effect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("boom:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("boom:animation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"boom"]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("boom:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("gunholder/gun:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("boom:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-12.666687, -78.66687)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("boom:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5.845454, 5.8454537)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("boom:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.1415927]
}

[sub_resource type="Animation" id="Animation_vccrt"]
resource_name = "destroy"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("boom:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("boom:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"boom"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("boom:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.90000004, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 4, 5, 6, 7, 8, 9, 10, 16]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("gunholder/gun:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"boom"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("boom:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-12.666687, -78.66687)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("boom:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5.845454, 5.8454537)]
}

[sub_resource type="Animation" id="Animation_nyng2"]
resource_name = "fire"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("gunholder:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.715585]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("effect:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.90000004),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 9, 10, 11]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("effect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_shoot_sound"
}]
}

[sub_resource type="Animation" id="Animation_ers0r"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("gunholder:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("effect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("boom:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("gunholder/gun:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_lrxn3"]
resource_name = "idle_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("gunholder:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.715585]
}

[sub_resource type="Animation" id="Animation_crpmn"]
resource_name = "mmu boom"
length = 8.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("boom:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-7.333333, 2401.333)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("boom:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"Mmu"
}, {
"args": [],
"method": &"boom"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("boom:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"mybeautifulboy"]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("boom:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 5, 5.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("boom:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(1.3, 1.3)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("boom:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.7, 3.3),
"transitions": PackedFloat32Array(14.420009, 3.7321289),
"update": 0,
"values": [0.0, -6.283185307179586]
}

[sub_resource type="Animation" id="Animation_ghr7w"]
resource_name = "point_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("gunholder:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.55478376, 5.8563375),
"update": 0,
"values": [0.715585, 0.0]
}

[sub_resource type="Animation" id="Animation_xldcp"]
resource_name = "point_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("gunholder:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2.6390157, 11.238361),
"update": 0,
"values": [0.0, 0.715585]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("effect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_awnbw"]
resource_name = "scoreboard"
length = 0.6
step = 0.1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_71a6e"]
_data = {
&"RESET": SubResource("Animation_r3qtb"),
&"destroy": SubResource("Animation_vccrt"),
&"fire": SubResource("Animation_nyng2"),
&"idle": SubResource("Animation_ers0r"),
&"idle_up": SubResource("Animation_lrxn3"),
&"mmu_boom": SubResource("Animation_crpmn"),
&"point_down": SubResource("Animation_ghr7w"),
&"point_up": SubResource("Animation_xldcp"),
&"scoreboard": SubResource("Animation_awnbw")
}

[node name="StoryArena4" type="StaticBody2D"]
process_mode = 3
scale = Vector2(3, 3)
script = ExtResource("1_8axos")
wait_time = 1

[node name="One-way-platform" type="StaticBody2D" parent="."]
position = Vector2(19.666687, 47.5)
collision_layer = 8388608

[node name="Sprite2D" type="Sprite2D" parent="One-way-platform"]
scale = Vector2(1.2798649, 0.88194525)
texture = ExtResource("2_08ymg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="One-way-platform"]
shape = SubResource("RectangleShape2D_11efd")
one_way_collision = true

[node name="One-way-platform2" type="StaticBody2D" parent="."]
position = Vector2(239.66666, -31.666672)
scale = Vector2(1.12, 1)
collision_layer = 8388608

[node name="Sprite2D" type="Sprite2D" parent="One-way-platform2"]
scale = Vector2(1.2798649, 0.88194525)
texture = ExtResource("2_08ymg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="One-way-platform2"]
shape = SubResource("RectangleShape2D_lx2g2")
one_way_collision = true

[node name="PlayerSpawn" type="Sprite2D" parent="."]
visible = false
position = Vector2(-424, 114.5)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_d25on")

[node name="Area2D" type="Area2D" parent="PlayerSpawn"]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSpawn/Area2D"]
position = Vector2(-1, 0.6669922)
shape = SubResource("RectangleShape2D_j1le4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 168)
shape = SubResource("WorldBoundaryShape2D_bvtk8")

[node name="wall" type="StaticBody2D" parent="."]
position = Vector2(0, 168)
collision_layer = 16777216

[node name="CollisionShape2D2" type="CollisionShape2D" parent="wall"]
position = Vector2(-500, -5.998047)
rotation = -1.5707964
shape = SubResource("RectangleShape2D_pat5w")
one_way_collision = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="wall"]
position = Vector2(500, 7.666667)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_pat5w")
one_way_collision = true

[node name="level-detail-shared" type="Sprite2D" parent="."]

[node name="floor" type="Sprite2D" parent="level-detail-shared"]
position = Vector2(0, 324)
scale = Vector2(1.2, 1)
texture = ExtResource("4_3qoc5")

[node name="enemy_spawn" type="Sprite2D" parent="level-detail-shared"]
position = Vector2(650, 80.333)
scale = Vector2(0.33333334, 0.33333334)
texture = ExtResource("5_vxvkr")

[node name="enemy_spawn2" type="Sprite2D" parent="level-detail-shared"]
position = Vector2(-650, 80.333)
scale = Vector2(0.33333334, 0.33333334)
texture = ExtResource("5_vxvkr")

[node name="StaticBody2D" type="StaticBody2D" parent="level-detail-shared"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="level-detail-shared/StaticBody2D"]
position = Vector2(575.66675, -303)
shape = SubResource("RectangleShape2D_d8wvr")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="level-detail-shared/StaticBody2D"]
position = Vector2(-636.3332, -318)
shape = SubResource("RectangleShape2D_naog5")

[node name="cannon" type="StaticBody2D" parent="."]
z_index = -1
position = Vector2(0, 27.666668)
scale = Vector2(0.5, 0.5)

[node name="base" type="Sprite2D" parent="cannon"]
position = Vector2(188, 112.66667)
texture = ExtResource("6_oqe8c")

[node name="gunholder" type="StaticBody2D" parent="cannon"]
position = Vector2(0, -55.333336)

[node name="gun" type="Sprite2D" parent="cannon/gunholder"]
visible = false
z_index = -2
position = Vector2(-494, -24.666664)
texture = ExtResource("7_0vpur")

[node name="effect" type="AnimatedSprite2D" parent="cannon"]
position = Vector2(-1009.33344, -1034)
rotation = -0.715585
scale = Vector2(15, 15)
sprite_frames = SubResource("SpriteFrames_wvjge")
animation = &"smoke"
speed_scale = 2.0

[node name="boom" type="AnimatedSprite2D" parent="cannon"]
visible = false
position = Vector2(-12.666687, -78.66687)
rotation = 3.1415927
scale = Vector2(5.845454, 5.8454537)
sprite_frames = SubResource("SpriteFrames_g82a2")
animation = &"boom"

[node name="mmu" type="StaticBody2D" parent="cannon"]
unique_name_in_owner = true
process_mode = 3
position = Vector2(-6, 3172.667)
scale = Vector2(2, 2)

[node name="floor" type="Sprite2D" parent="cannon/mmu"]
z_index = 79
scale = Vector2(1.2, 1)
texture = ExtResource("4_3qoc5")

[node name="Mmu" type="Sprite2D" parent="cannon"]
process_mode = 3
z_index = -10
position = Vector2(69.33334, 2374.667)
scale = Vector2(1.2, 1.2)
texture = ExtResource("13_o7rq5")

[node name="scoreboard" type="StaticBody2D" parent="cannon"]
visible = false
z_index = 99
position = Vector2(0, 2412.667)
scale = Vector2(1.5, 1.5)

[node name="container" type="Sprite2D" parent="cannon/scoreboard"]
modulate = Color(1, 1, 1, 0.5137255)
scale = Vector2(66.410255, 158.88876)
texture = ExtResource("14_gjou0")

[node name="VBoxContainer" type="VBoxContainer" parent="cannon/scoreboard"]
offset_left = -385.77777
offset_top = -390.22223
offset_right = 14.222229
offset_bottom = -231.22223
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 45

[node name="timer_label" type="Label" parent="cannon/scoreboard/VBoxContainer"]
process_mode = 3
modulate = Color(1.224127, 1.224127, 1.224127, 1)
z_index = 3
layout_mode = 2
size_flags_horizontal = 0
text = "Timer :
"
label_settings = SubResource("LabelSettings_hxxo4")

[node name="kill_count" type="Label" parent="cannon/scoreboard/VBoxContainer"]
process_mode = 3
modulate = Color(1.224127, 1.224127, 1.224127, 1)
z_index = 3
layout_mode = 2
size_flags_horizontal = 0
text = "Kill count :  
"
label_settings = SubResource("LabelSettings_hxxo4")

[node name="bullets_shot" type="Label" parent="cannon/scoreboard/VBoxContainer"]
process_mode = 3
modulate = Color(1.224127, 1.224127, 1.224127, 1)
z_index = 3
layout_mode = 2
size_flags_horizontal = 0
text = "Bullets 
shot :  
"
label_settings = SubResource("LabelSettings_hxxo4")

[node name="damage" type="Label" parent="cannon/scoreboard/VBoxContainer"]
process_mode = 3
modulate = Color(1.224127, 1.224127, 1.224127, 1)
z_index = 3
layout_mode = 2
size_flags_horizontal = 0
text = "Bullets 
shot :  
"
label_settings = SubResource("LabelSettings_hxxo4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
root_node = NodePath("../cannon")
libraries = {
&"": SubResource("AnimationLibrary_71a6e")
}

[connection signal="body_entered" from="PlayerSpawn/Area2D" to="." method="_on_area_2d_body_entered"]
